--- a/docs/package.json
+++ b/docs/package.json
@@ -41,6 +41,7 @@
     "js-yaml": ">=3.13.1",
     "lodash": ">=4.17.12",
     "mixin-deep": ">=1.3.2",
+    "serialize-javascript": ">=2.1.1",
     "set-value": ">=2.0.1"
   }
 }
