--- a/docs/package.json
+++ b/docs/package.json
@@ -40,6 +40,7 @@
   "resolutions": {
     "js-yaml": ">=3.13.1",
     "lodash": ">=4.17.12",
+    "lodash.template": ">=4.5.0",
     "mixin-deep": ">=1.3.2",
     "serialize-javascript": ">=2.1.1",
     "set-value": ">=2.0.1"
